--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@garthmcrae/use-storage",
+  "name": "garthmcrae/use-storage",
   "version": "0.0.1",
   "author": "Garth McRae",
   "license": "ISC",
